# rfraylib

./: Cargo.toml  README.md
examples/: window.rs
examples/core/: core_2d_camera.rs
examples/text/: text_input_box.rs
examples/textures/: textures_mouse_painting.rs
src/: audio.rs  core.rs  lib.rs  structs.rs  system.rs  text.rs  texture.rs
src/core/: cursor.rs  drawing.rs  input.rs  monitor.rs  window.rs
src/core/input/: gamepad.rs  keyboard.rs  mouse.rs  touch.rs
