[package]
name = "rfraylib" # "raylib2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
log = "0.4"
raylib4-sys = { git = "ssh://git@github.com/sile/raylib4-sys" }
thiserror = "1"
vsprintf = "2"

[dev-dependencies]
anyhow = "1"
env_logger = "0.9"

[[example]]
name = "text_input_box"
path = "examples/text/text_input_box.rs"
